--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "json:server": "json-server --port process.env.PORT --watch api/db.json",
-    "dev": "concurrently \"npm run start\" \"npm run json:server\"",
+    "server": "node server.js ",
+    "dev": "concurrently \"npm run start\" \"npm run server\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install && npm run build"
 
   },
